--- a/src/main/resources/style/Common.css
+++ b/src/main/resources/style/Common.css
@@ -1,5 +1,11 @@
 /*Top bar buttons*/
 
+#border-pane {
+    -fx-background-image: url("../images/background.jpg");
+    -fx-background-size: cover;
+    -fx-background-color: transparent;
+}
+
 .top-button {
     -fx-border-color: transparent;
     -fx-text-fill: white;
